tests/paczka1/small_fuzzy/18079345.err
Error in line 4: 4FdsKeTP S214 30,8
Error in line 7: 4FdsKeTP S760 8,8
